# hs-cover-art-archive

./: .gitignore  LICENSE  README.md  cover-art-archive.cabal
src/: CoverArtArchive.hs  Jpeg.hs
src/CoverArtArchive/: Errors.hs  Internal.hs  Types.hs
