name:                cover-art-archive
version:             0.1.0.0
synopsis:            API client for Cover Art Archive.
description:         https://coverartarchive.org/
homepage:            https://github.com/matthewleon/hs-cover-art-archive
license:             BSD3
license-file:        LICENSE
author:              Matthew Leon
maintainer:          ml@matthewleon.com
copyright:           2017 Matthew Leon
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CoverArtArchive
                     , CoverArtArchive.Types
                     , CoverArtArchive.Errors
                     , Jpeg
  other-modules:       CoverArtArchive.Internal
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , uuid-types
                     , text
                     , servant
                     , servant-client
                     , http-client-tls
                     , http-media
                     , http-types
                     , network-uri
                     , bytestring
  default-language:    Haskell2010

test-suite cover-art-archive-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , cover-art-archive
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/matthewleon/hs-cover-art-archive
